feat: reset HTML

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,33 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>FemBaseApparelComingSoonPage</title>
-  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <title>Frontend Mentor | Base Apparel coming soon page</title>
+  <meta name="description" content="Solution to the Base Apparel coming soon page challenge from Frontend Mentor">
+  <meta name="author" content="Johnny Gérard">
+  <base href="/">
+  <link rel="author" href="https://www.frontendmentor.io/profile/johnnygerard">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
+  <noscript>
+    <style>
+      body {
+        margin: 0 1rem !important;
+        padding: 8px 0 0 !important;
+        background: #fafafa !important;
+        color: #333 !important;
+      }
+
+    </style>
+  </noscript>
 </head>
+
 <body>
+  <noscript>
+    <p>You must enable JavaScript to use this website.</p>
+  </noscript>
   <app-root></app-root>
 </body>
+
 </html>
