--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <base href="/">
   <link rel="author" href="https://www.frontendmentor.io/profile/johnnygerard">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
+  <link rel="preconnect" href="https://ik.imagekit.io">
   <noscript>
     <style>
       body {
