--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Frontend Mentor | Base Apparel coming soon page</title>
-  <meta name="description" content="Solution to the Base Apparel coming soon page challenge from Frontend Mentor">
+  <meta name="description"
+      content="Solution to the Base Apparel coming soon page challenge from Frontend Mentor">
   <meta name="author" content="Johnny Gérard">
   <base href="/">
   <link rel="author" href="https://www.frontendmentor.io/profile/johnnygerard">
@@ -14,10 +15,16 @@
   <noscript>
     <style>
       body {
-        margin: 0 1rem !important;
-        padding: 8px 0 0 !important;
+        margin: 0 1em !important;
+        padding: .5em 0 0 !important;
         background: #fafafa !important;
         color: #333 !important;
+        font-family: ui-sans-serif, system-ui !important;
+      }
+
+      h2 {
+        margin-top: 1em !important;
+        font-size: 18rem !important;
       }
 
     </style>
@@ -26,7 +33,25 @@
 
 <body>
   <noscript>
-    <p>You must enable JavaScript to use this website.</p>
+    <p>
+      This Angular application requires JavaScript to display web pages.
+      Please turn it on in your browser settings and reload the page.
+    </p>
+    <p style="margin-top: 1em;">
+      For optimal security, performance, and visual display, the following browsers are recommended:
+    </p>
+    <h2>Mobile</h2>
+    <ul>
+      <li>Chrome for Android</li>
+      <li>Safari on iOS</li>
+    </ul>
+    <h2>Desktop</h2>
+    <ul>
+      <li>Chrome</li>
+      <li>Safari</li>
+      <li>Edge</li>
+      <li>Firefox</li>
+    </ul>
   </noscript>
   <app-root></app-root>
 </body>
