feat: add links to noscript

--- a/src/index.html
+++ b/src/index.html
@@ -34,10 +34,11 @@
 <body>
   <noscript>
     <p>
-      This Angular application requires JavaScript to display web pages.
+      This <a href="https://angular.io">Angular</a>
+      application requires JavaScript to display web pages.
       Please turn it on in your browser settings and reload the page.
     </p>
-    <p style="margin-top: 1em;">
+    <p style="margin-top: 1em">
       For optimal security, performance, and visual display, the following browsers are recommended:
     </p>
     <h2>Mobile</h2>
@@ -52,6 +53,9 @@
       <li>Edge</li>
       <li>Firefox</li>
     </ul>
+    <p style="margin-top: 1em">
+      <a href="https://angular.io/guide/browser-support">Angular browser support</a>
+    </p>
   </noscript>
   <app-root></app-root>
 </body>
