feat: update noscript style

--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,8 @@
       body {
         margin: 0 1em !important;
         padding: .5em 0 0 !important;
-        background: #fafafa !important;
-        color: #333 !important;
+        background: revert !important;
+        color: revert !important;
         font-family: ui-sans-serif, system-ui !important;
       }
 
